# QuantumJump

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.ps1  texture.tex
inc/: config.h  game.h  mesh.h  object.h  render.h  user.h  vector.h  wgl.h
inc/audio/: audio.h  sound.h
inc/component/: acomponent.h  collider.h  renderer.h  rigidbody.h  transform.h
inc/context/: context.h  time.h
inc/rendering/: font.h  mesh.h  render.h  texture.h
inc/utils/: math.h  matrix.h  vector.h
res/: BGM.sound  blue.tex  colors.tex  enemy.mesh  plane.mesh  platform0.mesh  platform1.mesh  platform3.mesh  player.mesh  player.tex  trap.tex
res/fonts/: default.tex
res/models/: checkpoint.mesh  platform2.mesh  platform4.mesh  player.mesh
res/models/collectibles/: bullet.mesh  gun.mesh  lasso.mesh  spur.mesh
res/models/obstacles/: cactus.mesh  coffin.mesh  rocks.mesh  snake.mesh  tombstone.mesh
res/textures/: colors.tex
src/: game.c  main.c  mesh.c  object.c  render.c  render.h  texture.c  texture.h  user.c  vector.c
src/audio/: audio.c
src/component/: acomponent.c  collider.c  renderer.c  rigidbody.c  transform.c
src/context/: context.c  time.c
src/rendering/: font.c  mesh.c  render.c  texture.c
src/utils/: matrix.c  vector.c
tools/: fmt_tex.py  fmt_tex_mesh.py  make_sound.lua
